--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,127 @@
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-size: 100%;
+}
+
+.logo {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  padding: 1.5rem;
+  width: 50%;
+}
+
+.entirePage {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 55%;
+  justify-content: center;
+}
+
+.question {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
 .prompt {
   margin-bottom: 1rem;
-  color: red;
+  color: black;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.selected {
-  background-color: grey;
-
+#options {
+  display: flex;
+  flex-direction: row;
+  padding: 0.75rem;
+  margin-bottom: 0.5rem;
+  border: 0.1rem solid #f1f1f1;
+  border-radius: 0.5rem;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
 }
 
-.notVisible {
+#options:hover {
+  background-color: #f1f3fb;
+  border: 0.1rem solid #dce4f6;
+}
+
+#options.selected {
+  border: 0.1rem solid #4e6bae;
+  color: white;
+  background-color: #4e6bae;
+}
+
+.checkbox {
+  margin-right: 0.5rem;
+}
+
+#submit.notVisible {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #4e6bae;
+  border-radius: 0.5rem;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
+  color: white;
+  margin-bottom: 5rem;
+  cursor: pointer;
+}
+
+#submit.isVisible {
   display: none;
 }
 
-.isVisible {
-  
+#reset.isVisible {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #4e6bae;
+  border-radius: 0.5rem;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
+  color: white;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+}
+
+#reset.notVisible {
+  display: none;
+}
+
+#results.notVisible {
+  display: none;
+}
+
+#results.isVisible {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5rem;
+  background-color: #dce4f6;
+  padding: 1.5rem;
+  font-size: 12px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  border-radius: 0.5rem;
+}
+
+#results.isVisible .congrats {
+  display: flex;
+  background-color: #dce4f6;
+  justify-content: center;
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0.5rem;
 }
