--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html {
 .logo {
   display: flex;
   margin: auto;
+  margin-top: 1.5rem;
   justify-content: center;
   padding: 1.5rem;
   width: 50%;
@@ -47,6 +48,7 @@ html {
   border-radius: 0.5rem;
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-size: 16px;
+  transition: 250ms ease-in-out;
 }
 
 #options:hover {
@@ -75,7 +77,7 @@ html {
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-size: 18px;
   color: white;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   cursor: pointer;
 }
 
@@ -109,7 +111,7 @@ html {
 #results.isVisible {
   display: flex;
   flex-direction: column;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   background-color: #dce4f6;
   padding: 1.5rem;
   font-size: 12px;
